--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <span id="file-name">Nenhum arquivo selecionado</span>
         <br />
         <div class="button-group">
-          <button type="submit">Listar</button>
-          <button type="button" onclick="clearFile()">Limpar</button>
+          <button type="submit" class="btn-listar"></button>>Listar</button>
+          <button type="button" class="btn-limpar"></button> onclick="clearFile()">Limpar</button>
         </div>
       </form>
 
